--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 spring:
   application:
     name: dispatcher-service
+  config:
+    import: "optional:configserver:"
   cloud:
     config:
       uri: http://localhost:8888
