--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,19 @@ repositories {
 ext {
 	set('snakeyaml.version', '2.0')
 	set('springCloudVersion', "2022.0.4")
+	set('otelVersion', "1.26.0")
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
+	implementation 'org.springframework.retry:spring-retry'
+
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+	runtimeOnly "io.opentelemetry.javaagent:opentelemetry-javaagent:${otelVersion}"
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test:'
 	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-binder'
